@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <addon id="plugin.download.irfree"
        name="IRFree.com"
-       version="0.2.2"
+       version="0.2.3"
        provider-name="pgoeri">
   <requires>
     <import addon="xbmc.python" version="1.0"/>
-    <import addon="plugin.program.jdownloader" version="1.0.2"/>
-    <import addon="script.module.ddlscraper" version="0.1.1"/>
+    <import addon="script.module.ddlscraper" version="0.1.2"/>
   </requires>
   <extension point="xbmc.python.pluginsource"
              library="default.py">
